--- a/project.html
+++ b/project.html
@@ -8,25 +8,13 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   <link rel = "stylesheet" href = "style.css">
 </head>
-<div class="ui inverted menu">
-<a href = "index.html" class = "item"> SHIN SAITO </a>
-<div class="ui simple dropdown item">
-    <span class="text">RESUME</span>
-    <i class="dropdown icon"></i>
-    <div class="ui menu">
-      <a class="item" href = "resume.html"> ENGLISH </a>
-      <a class="item" href="resumeJPN.html">日本語</a>
-    </div>
-  </div>
-  <div class="ui simple dropdown item">
-      <span class="text">PROJECT </span>
-      <i class="dropdown icon"></i>
-      <div class="ui menu">
-        <a class="item" href = "project.html"> ENGLISH </a>
-        <a class="item" href="projectJPN.html">日本語</a>
-      </div>
-    </div>
-<a href = "essay.html" class="item"> ESSAY </a>
+<div class="ui menu">
+  <div class="header item "> SHIN SAITO </div>
+  <a class = "item" href = "about.html"> ABOUT </a>
+  <a class = "item" href ="resume.html"> RESUME </a>
+  <a class="item" href = "project.html"> PROJECT </a>
+  <a class = "item" href = "essay.html"> ESSAY </a>
+  <a class = "header item" href = "jpn.html"> 日本語</a>
 </div>
 </head>
 <body>
@@ -34,36 +22,23 @@
   <h1 class = "ui centered aligned header">PROJECTS </h1>
   <hr>
   <div class="ui three cards">
-      <div class = "ui centered card">
-          <img class = "ui medium image" src = "images/RadGrad.png">
-          <div class = "content">
-            <div class = "center aligned header"> RadGrad </div>
-            <div class = "center aligned meta"> 2021-08-17 </div>
-            <div class = "description">
-              An application for Computer Science students at UH Manoa can use as a navigation for their studies as a undergraduate student.
-            </div>
-          </div>
-          <div class = "extra content">
-            Software Engineering, Meteor, React
-            <a href="radgrad.html" class="ui bottom attached button">
+    <!--<div class = "ui centered card">
+        <img class = "ui medium image" src = "images/fortune.jpeg">
+        <div class = "content">
+          <div class = "center aligned header">  Yuugen Jikou Stars </div>
+          <div class = "center aligned meta"> 2021-02-23 (On Progress)</div>
+          <div class = "description">
+            An ongoing semester progess project created for JPN 402 class. A multi media project where students create a series idea on a story and
+            presents different ideas to it.
+            <br/>
+            <a href="yugen.html" class="ui bottom attached button">
             MORE DETAILS</a>
           </div>
         </div>
-        <div class = "ui centered card">
-            <img class = "ui medium image" src = "images/RadGrad.png">
-            <div class = "content">
-              <div class = "center aligned header"> ICS 427 Project  </div>
-              <div class = "center aligned meta"> 2021-07-02 </div>
-              <div class = "description">
-                An application that centers around
-              </div>
-            </div>
-            <div class = "extra content">
-              Software Engineering, Meteor, React
-              <a href="radgrad.html" class="ui bottom attached button">
-              MORE DETAILS</a>
-            </div>
-          </div>
+        <div class = "extra content">
+          Japanese Writing, Web Design, Design
+        </div>
+      </div>-->
     <div class = "ui centered card">
         <img class = "ui medium image" src = "images/shocking.png">
         <div class = "content">
@@ -80,23 +55,6 @@
           MORE DETAILS</a>
         </div>
       </div>
-      <div class = "ui centered card">
-            <img class = "ui medium image" src = "images/fortune.jpeg">
-            <div class = "content">
-              <div class = "center aligned header">  Yuugen Jikou Stars </div>
-              <div class = "center aligned meta"> 2021-05-03</div>
-              <div class = "description">
-                An semester project created for JPN 402 class. A multi media project where students create a series idea on a story and
-                presents different ideas to it.
-                <br/>
-              </div>
-            </div>
-            <div class = "extra content">
-              Japanese Writing, Web Design, Design
-              <a href="yugen.html" class="ui bottom attached button">
-              MORE DETAILS</a>
-            </div>
-          </div>
       <div class = "ui centered card">
           <img class = "ui medium image" src = "images/tregear.png">
           <div class = "content">
