--- a/resume.html
+++ b/resume.html
@@ -10,26 +10,13 @@
 </head>
 
 <body>
-
-  <div class="ui inverted menu">
-  <a href = "index.html" class = "item"> SHIN SAITO </a>
-  <div class="ui simple dropdown item">
-      <span class="text">RESUME</span>
-      <i class="dropdown icon"></i>
-      <div class="ui menu">
-        <a class="item" href = "resume.html"> ENGLISH </a>
-        <a class="item" href="resumeJPN.html">日本語</a>
-      </div>
-    </div>
-    <div class="ui simple dropdown item">
-        <span class="text">PROJECT </span>
-        <i class="dropdown icon"></i>
-        <div class="ui menu">
-          <a class="item" href = "project.html"> ENGLISH </a>
-          <a class="item" href="projectJPN.html">日本語</a>
-        </div>
-      </div>
-  <a href = "essay.html" class="item"> ESSAY </a>
+  <div class="ui menu">
+    <div class="header item " href = "index.html"> SHIN SAITO </div>
+    <a class = "item" href = "about.html"> ABOUT </a>
+    <a class = "item" href ="resume.html"> RESUME </a>
+    <a class="item" href = "project.html"> PROJECT </a>
+    <a class = "item" href = "essay.html"> ESSAY </a>
+    <a class = "header item" href = "jpn.html"> 日本語</a>
   </div>
 <div class = "ui text container">
 <h2 class = "ui centered aligned header"> Shinya Saito </h2>
