--- a/index.html
+++ b/index.html
@@ -8,43 +8,25 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   <link rel = "stylesheet" href = "style.css">
   <div class="bg-home">
-    <div class="ui inverted menu">
-    <a href = "index.html" class = "item"> SHIN SAITO </a>
-    <div class="ui simple dropdown item">
-        <span class="text">RESUME</span>
-        <i class="dropdown icon"></i>
-        <div class="ui menu">
-          <a class="item" href = "resume.html"> ENGLISH </a>
-          <a class="item" href="resumeJPN.html">日本語</a>
-        </div>
-      </div>
-      <div class="ui simple dropdown item">
-          <span class="text">PROJECT </span>
-          <i class="dropdown icon"></i>
-          <div class="ui menu">
-            <a class="item" href = "project.html"> ENGLISH </a>
-            <a class="item" href="projectJPN.html">日本語</a>
-          </div>
-        </div>
-    <a href = "essay.html" class="item"> ESSAY </a>
+    <div class="ui menu">
+      <div class="header item "> SHIN SAITO </div>
+      <a class = "item" href = "about.html"> ABOUT </a>
+      <a class = "item" href ="resume.html"> RESUME </a>
+      <a class="item" href = "project.html"> PROJECT </a>
+      <a class = "item" href = "essay.html"> ESSAY </a>
+      <a class = "header item" href = "jpn.html"> 日本語</a>
     </div>
 </head>
 <body>
-
 <div class = "center-screen">
 <img class="ui circular centered image" src="images/profile.jpeg">
 <h2 class="ui center aligned header"> SHIN SAITO </h2>
 <h3 class="ui center aligned header"> COMPUTER SCIENCE & MATHEMATICS </h3>
 <div class="ui horizontal buttons">
-    <a href="https://www.instagram.com/iseyadj45/?hl=en" class="ui tiny instagram button"><i class="instagram icon"></i>
-      Instagram </a>
+    <a href="https://www.instagram.com/iseyadj45/?hl=en" class="ui tiny instagram button"><i class="instagram icon"></i> </a>
 
-    <a href="https://www.linkedin.com/in/shinya-saito-9b76a2197/" class="ui tiny linkedin button"><i class="linkedin icon"></i>
-      LinkedIn </a>
-    <a href="https://github.com/saitoshi" class="ui tiny github button"><i class="github icon"></i>
-        GitHub </a>
+    <a href="https://www.linkedin.com/in/shinya-saito-9b76a2197/" class="ui tiny linkedin button"><i class="linkedin icon"></i> </a>
+    <a href="https://github.com/saitoshi" class="ui tiny github button"><i class="github icon"></i></a>
 </div>
 </div>
-
 </body>
-</div>
