--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="ui menu">
-    <div class="header item " href = "index.html"> SHIN SAITO </div>
+    <div class="header item "> SHIN SAITO </div>
     <a class = "item" href = "about.html"> ABOUT </a>
     <a class = "item" href ="resume.html"> RESUME </a>
     <a class="item" href = "project.html"> PROJECT </a>
