--- a/pandemic.html
+++ b/pandemic.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="ui menu">
-    <div class="header item "> SHIN SAITO </div>
+    <div class="header item" href = "index.html"> SHIN SAITO </div>
     <a class = "item" href = "about.html"> ABOUT </a>
     <a class = "item" href ="resume.html"> RESUME </a>
     <a class="item" href = "project.html"> PROJECT </a>
