--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
   <link rel = "stylesheet" href = "style.css">
 </head>
 <div class="ui menu">
-  <div class="header item "> SHIN SAITO </div>
+  <div class="header item" href = "index.html"> SHIN SAITO </div>
   <a class = "item" href = "about.html"> ABOUT </a>
   <a class = "item" href ="resume.html"> RESUME </a>
   <a class="item" href = "project.html"> PROJECT </a>
