--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ My interests are in <b>Software Engineering, Mathematic Teaching, and Design</b>
          <br/>
        </div>
        <div class = "extra content">
-         <a href="shocking.html" class="ui bottom attached button">
+         <a href="https://github.com/saitoshi/ics312" class="ui bottom attached button">
          GITHUB REPO</a>
        </div>
      </div>
