--- a/about.html
+++ b/about.html
@@ -123,6 +123,21 @@ My interests are in <b>Software Engineering, Mathematic Teaching, and Design</b>
      </div>
   </div>
   </div>
+  <h3 class = "ui header"> SPRING 2020 </h3>
+  <div class = "ui three cards">
+    <div class = "ui centered card">
+      <div class="content">
+      <div class="centered aligned header">MATH 331 INTRO TO REAL ANALYSIS</div>
+      <div class = "description">
+           A rigorous axiomatic development of one variable calculus. Completeness, topology of the line, limits, continuity, differentiation, integration. Emphasis on teaching mathematical writing.
+         </div>
+         <div class = "extra content">
+           <a href="shocking.html" class="ui bottom attached button">
+           GITHUB REPO</a>
+         </div>
+       </div>
+    </div>
+  </div>
 </div>
 </body>
 <div class="push">
