--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@ My interests are in <b>Software Engineering, Mathematic Teaching, and Design</b>
            A rigorous axiomatic development of one variable calculus. Completeness, topology of the line, limits, continuity, differentiation, integration. Emphasis on teaching mathematical writing.
          </div>
          <div class = "extra content">
-           <a href="shocking.html" class="ui bottom attached button">
+           <a href="https://github.com/saitoshi/Math_ICS_Materials/tree/main/MATH/331" class="ui bottom attached button">
            GITHUB REPO</a>
          </div>
        </div>
