--- a/resume.html
+++ b/resume.html
@@ -57,11 +57,15 @@ Bachelors Candidate in Mathematics and ICS (expected to graduate in Fall 2021)
   <li> ICS 311 - Algorithms
   <li> ICS 314 - Software Engineering I
   <li> ICS 312 - Machine Level and System Programming
+  <li> ICS 313 - Programming Language Theory
   <li> ICS 321 - Database System I
+  <li> ICS 332 - Operating System
   <li> ICS 390 - Computing Ethics for Lab Assistants
   <li> ICS 414 - Software Engineering II
+  <li> ICS 426 - Computer System Security
   <li> ICS 427 - Software Quality Assurance
   <li> ICS 435 - Machine Learning
+  <li> ICS 469 - Cognitie Science 
   <li> JPN 402 - Fourth Year in Japanese II
   <li> JPN 403 - Fourth-Year Japanese for Advanced Speakers I
   <li> JPN 421 - Japanese Composition
