--- a/resume.html
+++ b/resume.html
@@ -8,10 +8,9 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   <link rel = "stylesheet" href = "style.css">
 </head>
-
 <body>
   <div class="ui menu">
-    <div class="header item" href = "index.html"> SHIN SAITO </div>
+    <a class="header item" href= "index.html" > SHIN SAITO </a>
     <a class = "item" href = "about.html"> ABOUT </a>
     <a class = "item" href ="resume.html"> RESUME </a>
     <a class="item" href = "project.html"> PROJECT </a>
@@ -65,7 +64,7 @@ Bachelors Candidate in Mathematics and ICS (expected to graduate in Fall 2021)
   <li> ICS 426 - Computer System Security
   <li> ICS 427 - Software Quality Assurance
   <li> ICS 435 - Machine Learning
-  <li> ICS 469 - Cognitie Science 
+  <li> ICS 469 - Cognitie Science
   <li> JPN 402 - Fourth Year in Japanese II
   <li> JPN 403 - Fourth-Year Japanese for Advanced Speakers I
   <li> JPN 421 - Japanese Composition
