--- a/textbook.html
+++ b/textbook.html
@@ -8,10 +8,9 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   <link rel = "stylesheet" href = "style.css">
 </head>
-
 <body>
   <div class="ui menu">
-    <div class="header item" href = "index.html"> SHIN SAITO </div>
+    <a class="header item" href= "index.html" > SHIN SAITO </a>
     <a class = "item" href = "about.html"> ABOUT </a>
     <a class = "item" href ="resume.html"> RESUME </a>
     <a class="item" href = "project.html"> PROJECT </a>
