--- a/radgrad_review.html
+++ b/radgrad_review.html
@@ -25,7 +25,7 @@
   <hr>
 As a University of Hawaii student, your best friend during your undergraduate career is probably going to be Star. Star allows you to register for courses, pay for your tuition, scholarship, and see your current academic standings. However, as a STEM, especially as an ICS student there are moments where you feel Star is not enough. Star does not provide internship details or in-depth recommended career paths. To support the many flaws, an ICS student has RadGrad. This application provides ICS students ways on how they can attain their career goals, a list of courses they should take, and many more. Additionally, it has a level and point system like Pokemon providing an incentive to do better. Despite the many strength, because of the “Ying and Yang” rule, there are some weaknesses that RadGrad struggles in.
 <img class="ui centered big image" src="https://www.radgrad.org/assets/images/ice-example-b89aedaa1bd783119aca969f47745f02.png">
-
+<div class="comment"> A screenshot of a page from RadGrad</div>
 <h4> Strength </h4>
 <ol>
 <li> <span class = "bold-list">Priority List System</span></li>
