--- a/radgrad_review.html
+++ b/radgrad_review.html
@@ -40,9 +40,10 @@ Here are some of the following the current RadGrad system tends to be weak at.
 <ol>
 <li> <span class = "bold-list">Consistency</span></li>
 The current application lacks in the area of design consistency. For instance, within the  opportunities page the usage of bold font is inconsistent. For example, <span class = “bold”>Amazon Web Service</span> has its name bolded whereas Android or IOS does not. From a personal opinion, if one is bolded maybe, it is better to do so for the others.
-
 <br/>
 Another example is that some buttons have autotranslations on despite everything else is in English. For instance, on the student review pages, the submit button for me is written in Japanese kanji rather than English. While making assumptions goes against my mathematical background, I assume that most of the RadGrad users will understand what submit is. Therefore, consistency should be applied to the language area too.
+<img class="ui centered big image" src="images/submit.png">
+<div class="comment">Everything else but submit is in English.</div>
 <li><span class="bold-list">Filter or Search Function</span></li>
 As of right now, RadGrad has a good search function, but I still think it is not as user-friendly as it could be. For example, in the Interest Page, maybe the varieties listed could be filter based on the category of its interest. For instance, Java, C, or Python could be programming languages whereas others could be different. Additionally, something similar to this could be added to the Career Page also.
 
