--- a/essay.html
+++ b/essay.html
@@ -22,8 +22,24 @@
   <h2 class = "ui centered aligned header"> ESSAY </h2>
   <hr>
   <p> Some blog like essay I wrote both for classes and some outside of classes. </p>
-  <div class ="ui cards">
-    <div class="card">
+  <div class ="ui three cards">
+    <div class="ui centered card">
+      <img class = "ui medium image" src = "images/RadGrad.png">
+      <div class="content">
+        <div class="centered aligned header">A Critical Review Of RadGrad</div>
+        <div class="meta">May 19, 2021</div>
+        <div class = "description">
+          An essay providing critical feedback on the deployed application of <a href ="https://www.radgrad.org/">RadGrad</a>.
+        </div>
+        <div class = "extra content">
+        <a href="radgrad_review.html" class="ui bottom attached button">
+          READ MORE</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui centered card">
+      <img class = "ui big image" src = "images/pandemic.png">
       <div class="content">
         <div class="centered aligned header">Lockdown Pandemic</div>
         <div class="meta">April 01, 2020</div>
@@ -36,6 +52,8 @@
         </div>
       </div>
     </div>
+
+
 
 
   </div>
