--- a/radgrad_review.html
+++ b/radgrad_review.html
@@ -80,7 +80,10 @@ On the student planner and the courses list, there are few ICS courses that are 
 <img class="ui centered medium image" src="images/427.png">
 <div class="comment">The missing ICS 427 I am going to take for Summer 2021.</div>
 </ol>
-
+<br/>
+<h3>Benefits of Reviews</h3>
+Living in the era of "positive wokeness", people tend to not point out flaws in flaws in both people and objects. However, in a professional manner, I think it is neccessary to point out flaws. Having flaws means that there is opportunity for growth.
+For example, finding the area of errors that the current deployed RadGrad right now can grow the user happiness. Why? It is beause these errors are fixed before the usage of general usage. When users are happy using the system, it means that the application is doing a good job. Therefore, pointing out the area of errors and improvement is a neccesary thing. Without it nothing can change.
 </div>
 </div>
 <div class="push">
