--- a/radgrad_review.html
+++ b/radgrad_review.html
@@ -20,6 +20,8 @@
 <div class ="ui container">
 <div class="title">
 <h2 class = "ui centered alignd header"> A Critical Review Of RadGrad </h2>
+<b> May 19, 2021 <br/>
+  RadGrad2, Summer 2021 Internship Program, Software Engineering </b>
 </div>
 <div class = "ui text container">
   <hr>
