--- a/radgrad_review.html
+++ b/radgrad_review.html
@@ -51,7 +51,8 @@ Another example is that some buttons have autotranslations on despite everything
 <div class="comment">Everything else but submit is in English.</div>
 <li><span class="bold-list">Filter or Search Function</span></li>
 As of right now, RadGrad has a good search function, but I still think it is not as user-friendly as it could be. For example, in the Interest Page, maybe the varieties listed could be filter based on the category of its interest. For instance, Java, C, or Python could be programming languages whereas others could be different. Additionally, something similar to this could be added to the Career Page also. Having a stronger search function makes users to condense their time spent on the app and they may explore other features available.
-
+<img class="ui centered big image" src="images/submit.png">
+<div class="comment">Add more ways to filter through the diffent choices.</div>
 <li><span class="bold-list">Student Planner</span></li>
 Currently, it is said that Student Planner should be a reflection on the registered information on Star. However, as of right now it contains ICS courses that I have no recollection of registering both on Star or RadGrad, The other case would be that I have registered to take a certain course next semester, but it is claiming that I a repeating a certain course. For instance, I am registered for ICS 313 in Fall 2021, but on RadGrad’s student planner it is listed that I took it in the Spring 2021 and will take it again in the Fall.
 <img class="ui centered big image" src="images/duplicate.png">
