--- a/essay.html
+++ b/essay.html
@@ -26,6 +26,21 @@
     <div class="ui centered card">
       <img class = "ui medium image" src = "images/RadGrad.png">
       <div class="content">
+        <div class="centered aligned header">A Response On RadGrad Research</div>
+        <div class="meta">May 20, 2021</div>
+        <div class = "description">
+          A response on the RadGrad research: purpose and ways to get student feedback.
+        </div>
+        <div class = "extra content">
+        <a href="RadGradResponse.html" class="ui bottom attached button">
+          READ MORE</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui centered card">
+      <img class = "ui medium image" src = "images/RadGrad.png">
+      <div class="content">
         <div class="centered aligned header">A Critical Review Of RadGrad</div>
         <div class="meta">May 19, 2021</div>
         <div class = "description">
