--- a/RadGradResponse.html
+++ b/RadGradResponse.html
@@ -19,7 +19,7 @@
 <body>
 <div class ="ui container">
 <div class="title">
-<h2>The Response Of RadGrad</h2>
+<h2>The Response On RadGrad</h2>
 <b> RadGrad, Summer Intern, Software Engineering</b><br/>
 <b> May 20,2021</b>
 </div>
