--- a/project.html
+++ b/project.html
@@ -22,6 +22,21 @@
   <h1 class = "ui centered aligned header">PROJECTS </h1>
   <hr>
   <div class="ui three cards">
+    <div class = "ui centered card">
+        <img class = "ui medium image" src = "images/RadGrad.png">
+        <div class = "content">
+          <div class = "center aligned header"> RadGrad 2.0</div>
+          <div class = "center aligned meta"> ON GOING </div>
+          <div class = "description">
+            A meteor based application in which ICS students at UH Manoa can use it as an undergraduate planner.
+          </div>
+        </div>
+        <div class = "extra content">
+          Software Engineering, Meteor, React
+          <a href="radgrad.html" class="ui bottom attached button">
+          MORE DETAILS</a>
+        </div>
+      </div>
     <!--<div class = "ui centered card">
         <img class = "ui medium image" src = "images/fortune.jpeg">
         <div class = "content">
