--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class = "center-screen">
 <img class="ui circular centered image" src="images/profile.jpeg">
 <h2 class="ui center aligned header"> SHIN SAITO </h2>
-<h3 class="ui center aligned header"> COMPUTER SCIENCE & MATHEMATICS </h3>
+<h3 class="ui center aligned header"> COMPUTER SCIENCE AND MATHEMATICS </h3>
 <div class="ui horizontal buttons">
     <a href="https://www.instagram.com/iseyadj45/?hl=en" class="ui tiny instagram button"><i class="instagram icon"></i> </a>
 
