--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,9 @@ Languages and Frameworks: Python, C, Java, Javascript, HTML, Semantic UI
 <br/>
 Toolsets/OS: MacOS, Git/GitHub, Windows, Intellij IDEA
 <br/>
-Bilingual in Japanese and English
+Bilingual in Japanese and English <br/>
+JLPT N1 and N2 <br/>
+TOEIC Listen and Learning 975 (May 2021) 
 <hr>
 <h4 class = "ui header"> Education </h4>
 University of Hawaii, Honolulu, HI <br/>
