--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
         <img class = "ui medium image" src = "images/RadGrad.png">
         <div class = "content">
           <div class = "center aligned header"> RadGrad 2.0</div>
-          <div class = "center aligned meta"> ON GOING </div>
+          <div class = "center aligned meta"> May to July 2021 </div>
           <div class = "description">
             A meteor based application in which ICS students at UH Manoa can use it as an undergraduate planner.
           </div>
