--- a/project.html
+++ b/project.html
@@ -37,6 +37,21 @@
           MORE DETAILS</a>
         </div>
       </div>
+      <div class = "ui centered card">
+          <img class = "ui medium image" src = "https://github.com/saitoshi/images/blob/main/algotrix.png?raw=true">
+          <div class = "content">
+            <div class = "center aligned header"> Algo-Trix</div>
+            <div class = "center aligned meta"> July 2021 </div>
+            <div class = "description">
+             A Meteor and React based application created for ICS 427 Summer 2021 that provides college students additional practice for Algorithm outside of a textbook.
+            </div>
+          </div>
+          <div class = "extra content">
+             Software Engineering, React, Software Quality Assurance
+            <a href="algortix.html" class="ui bottom attached button">
+            MORE DETAILS</a>
+          </div>
+        </div>
     <!--<div class = "ui centered card">
         <img class = "ui medium image" src = "images/fortune.jpeg">
         <div class = "content">
