--- a/essay.html
+++ b/essay.html
@@ -26,6 +26,20 @@
     <div class="ui centered card">
       <img class = "ui medium image" src = "images/RadGrad.png">
       <div class="content">
+        <div class="centered aligned header">Rising With RadGrad</div>
+        <div class="meta">07-30-21</div>
+        <div class = "description">
+        An essay centering around a pilot study centering around with the new updates centered around RadGrad2.
+        </div>
+        <div class = "extra content">
+        <a href="RadGradPilotStudy.html" class="ui bottom attached button">
+          READ MORE</a>
+        </div>
+      </div>
+    </div>
+    <div class="ui centered card">
+      <img class = "ui medium image" src = "images/RadGrad.png">
+      <div class="content">
         <div class="centered aligned header">A Response On RadGrad Research</div>
         <div class="meta">May 20, 2021</div>
         <div class = "description">
