--- a/algortix.html
+++ b/algortix.html
@@ -41,6 +41,18 @@ The application that the group created was called Algo-Trix which is a user-base
 </ul>
 <img src = "https://github.com/saitoshi/images/blob/main/algotrix.png?raw=true" class = "ui centered large image"/>
 <div class="comment">The logo created for AlgoTrix application.</div>
+<b><u>Contributions to AlgoTrix</u></b><br/>
+    With ICS 427 being a six week course, our group took advantage of GitHub's <i>Kanban</i> by making Weekly Milestone Issues where each
+    week a member selected an issue to work on.
+    <ol>
+             <li><a href="https://github.com/cross-country-coders/algo-trix/projects/1">Milestone 1</a></li>
+             For Milestone 1, the main goal was to get the mock designs for the application to be created.
+             To begin with the group used <a href={"https://www.figma.com/files/recent?fuid=934216239644834346"}>Figma</a> to make mock up designs. I did the Landing Page, Sample Problem, and Notes Pages.
+             <li><b>Week 3 Contributions</b></li>
+
+
+    </ol>
+
 </div>
 </body>
 <div class="push">
