--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
         <img class = "ui medium image" src = "images/RadGrad.png">
         <div class = "content">
           <div class = "center aligned header"> RadGrad 2.0</div>
-          <div class = "center aligned meta"> May to July 2021 </div>
+          <div class = "center aligned meta"> 2021-07-31 </div>
           <div class = "description">
             A meteor based application in which ICS students at UH Manoa can use it as an undergraduate planner.
           </div>
@@ -41,7 +41,7 @@
           <img class = "ui medium image" src = "https://github.com/saitoshi/images/blob/main/algotrix.png?raw=true">
           <div class = "content">
             <div class = "center aligned header"> Algo-Trix</div>
-            <div class = "center aligned meta"> July 2021 </div>
+            <div class = "center aligned meta"> 2021-07-03 </div>
             <div class = "description">
              A Meteor and React based application created for ICS 427 Summer 2021 that provides college students additional practice for Algorithm outside of a textbook.
             </div>
