--- a/project.html
+++ b/project.html
@@ -25,6 +25,21 @@
     <div class = "ui centered card">
         <img class = "ui medium image" src = "images/RadGrad.png">
         <div class = "content">
+          <div class = "center aligned header"> Internaloha</div>
+          <div class = "center aligned meta"> On Going  </div>
+          <div class = "description">
+             A scrapper for the RadGrad application where it extracts information for recent internships.
+          </div>
+        </div>
+        <div class = "extra content">
+          Software Engineering, Scrapper, TypeScript
+          <a href="internaloha.html" class="ui bottom attached button">
+          MORE DETAILS</a>
+        </div>
+      </div>
+    <div class = "ui centered card">
+        <img class = "ui medium image" src = "images/RadGrad.png">
+        <div class = "content">
           <div class = "center aligned header"> RadGrad 2.0</div>
           <div class = "center aligned meta"> 2021-07-31 </div>
           <div class = "description">
