--- a/radgrad.html
+++ b/radgrad.html
@@ -89,10 +89,11 @@ Additionally, for the first week issues, we were asked to write essays on the di
          <div class="comment">A screenshot of the a comment displaying that a user has not opportunity with them.</div>
          <br/>
          <b><u>Week 8/9 Tasks</u></b><br/>
-  During week 8 and 9, a pilot study was held with undergraduate students from Computer Science students. Depending on the participants preference,
-  the pilot study was held on either Zoom or Discord. With the set of questions written by Professor Johnson, the student interns asked the participants
-  what they felt about the current RadGrad system and how it could be further improved.
-
+         During week 8 and 9, a pilot study was held with undergraduate students from Computer Science students. Depending on the participants preference,
+         the pilot study was held on either Zoom or Discord. With the set of questions written by Professor Johnson, the student interns asked the participants
+         what they felt about the current RadGrad system and how it could be further improved.
+         <b><u>Week 10</b></u><br/>
+         The last week of RadGrad we participated in the UH
 </div>
 
 
