--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
   <hr>
   <div class="ui three cards">
     <div class = "ui centered card">
-        <img class = "ui medium image" src = "images/RadGrad.png">
+        <img class = "ui medium image" src = "https://internaloha.github.io/documentation/img/internaloha-logo.png">
         <div class = "content">
           <div class = "center aligned header"> Internaloha</div>
           <div class = "center aligned meta"> On Going  </div>
