--- a/internaloha.html
+++ b/internaloha.html
@@ -26,11 +26,24 @@
 </div>
 <div class = "ui text container">
 <hr>
-
+For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/courses/ics-496-capstone-project-3/">ICS 469</a>) I have teamed up with Professor Johnson with the development of Internaloha Scrappers.
 <ul>
-<li>Group Organization: <a href = "https://internaloha.github.io/documentation/">LINK</a></li>
+  <li>Group Organization: <a href = "https://internaloha.github.io/documentation/">LINK</a></li>
+  <li>GitHub Repository: <a href ="https://github.com/internaloha/scrapers">LINK</a></li>
   </ul>
-  </div>
+  <b><u>Purpose</u></b><br/>
+  The main purpose of this project was to update the previous scrappers by using TypeScript and a common format. Previously, the scrappers were written by a different group of students where the basic format was not necessarily uniform.
+  For the Fall 2021, our main goal was to update is using classes and making it more unified within the different scrappers. <br/>
+  Using the <a href ="https://github.com/internaloha/scrapers/projects/1">Project Board</a> function from GitHub, each student worked on a certain issue regarding to the scrappers.
+  <br/>
+  Below are the different scrappers and a brief summary associated to it. <br/>
+  <b>ZipRecruiter Scrapper</b><br/>
+  This was the first scrapper I have worked on with the new format. Initially, I based it off of the previous ZipRecruiter scrapper.
+  However, I noticed that there were issues with following it. Thus, decided to trust my own confidence and was able to create the ZipRecruiter scrapper.
+  <br/>
+  
+</div>
+</div>
   </body>
   <div class="push">
   </div>
