--- a/internaloha.html
+++ b/internaloha.html
@@ -41,7 +41,7 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   This was the first scrapper I have worked on with the new format. Initially, I based it off of the previous ZipRecruiter scrapper.
   However, I noticed that there were issues with following it. Thus, decided to trust my own confidence and was able to create the ZipRecruiter scrapper.
   <br/>
-  <b>StackOverFlow Scrapper</b><br/>
+  <b><a href ="https://github.com/internaloha/scrapers/blob/403de67709b04523503e6cb516c8555ef3dbdb73/scrapers/Scraper.stackoverflow.ts">StackOverFlow Scrapper</a></b><br/>
   This was the fourth scrapper I have worked on. <br/>
   Initially, the pattern was similar to others so writing it initially was not bad. However, after doing a test scrape I noticed that the total jobs scrapped were greater than the amount of internships available.
   I noticed that the scrapper scraped the recommended jobs. Therefore, to avoid this I extracted the number of internships listed on the page and then did the for loop based on that instead of the urls.length.
