--- a/internaloha.html
+++ b/internaloha.html
@@ -54,6 +54,10 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
       <br/>
       for (let i = 0; i < jobNumber ; i++) </p>
   </code>
+  <div class = "comment">
+    <br/>
+    The code written to extract the number of internships.
+  </div>
 
 </div>
 </div>
