update on website

--- a/internaloha.html
+++ b/internaloha.html
@@ -37,7 +37,7 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   Using the <a href ="https://github.com/internaloha/scrapers/projects/1">Project Board</a> function from GitHub, each student worked on a certain issue regarding to the scrappers.
   <br/>
   Below are the different scrappers and a brief summary associated to it. <br/>
-  <b>ZipRecruiter Scrapper</b><br/>
+  <b><a href ="https://github.com/internaloha/scrapers/blob/main/scrapers/Scraper.ziprecruiter.ts">ZipRecruiter Scrapper</a></b><br/>
   This was the first scrapper I have worked on with the new format. Initially, I based it off of the previous ZipRecruiter scrapper.
   However, I noticed that there were issues with following it. Thus, decided to trust my own confidence and was able to create the ZipRecruiter scrapper.
   <br/>
