--- a/internaloha.html
+++ b/internaloha.html
@@ -41,6 +41,26 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   This was the first scrapper I have worked on with the new format. Initially, I based it off of the previous ZipRecruiter scrapper.
   However, I noticed that there were issues with following it. Thus, decided to trust my own confidence and was able to create the ZipRecruiter scrapper.
   <br/>
+  <b><a href="">GlassDoor Scrapper</a></b><br/>
+  This was the third scrapper I have worked on. <br/>
+  In the original scrapper GlassDoor took one to two hours to scrape all the necessary information. After writing two scrappers writing the scrapers itself did not
+  take a long time compared to the previous two. However, unlike the two scrapers, the scraper only took the url from the main page and rest of the necessary information (position title, company, description, etc.)
+  was scrapped from going to that certain URL. <br/>
+  Furthermore, since the GlassDoor scrapper has multiple pages depending on the week, I created a for loop by scrapping the number of pages.
+  <br/>
+  <code>
+    <p>
+      <br/>
+      // retrieve the total number of pages<br/>
+      let key = await super.getValue('div[class="cell middle d-none d-md-block py-sm"]', 'innerText');<br/>
+      key = key.split(' ');<br/>
+      // get the highest amount of pages<br/>
+      let numberOfPages = key[3];<br/>
+      // for each j starting from 2 iterate the number of available pages of internship<br/>
+      for (let j = 2; j < numberOfPages+1; j++) {
+    </p>
+  </code>
+  <br/>
   <b><a href ="https://github.com/internaloha/scrapers/blob/403de67709b04523503e6cb516c8555ef3dbdb73/scrapers/Scraper.stackoverflow.ts">StackOverFlow Scrapper</a></b><br/>
   This was the fourth scrapper I have worked on. <br/>
   Initially, the pattern was similar to others so writing it initially was not bad. However, after doing a test scrape I noticed that the total jobs scrapped were greater than the amount of internships available.
@@ -48,6 +68,7 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   <br/>
   <br/>
   <code>
+    <br/>
     <p>
       // extract the number of internships currently available<br/>
       const key = await super.getValue('span[class="description fc-light fs-body1"]', 'innerText');
