--- a/radgrad.html
+++ b/radgrad.html
@@ -93,7 +93,16 @@ Additionally, for the first week issues, we were asked to write essays on the di
          the pilot study was held on either Zoom or Discord. With the set of questions written by Professor Johnson, the student interns asked the participants
          what they felt about the current RadGrad system and how it could be further improved.
          <b><u>Week 10</b></u><br/>
-         The last week of RadGrad we participated in the UH
+         The last week of RadGrad we participated in the UH Research Group Presentation. Here the group participated in a Zoom Meeting where we created a poster presenting the
+         results of the Pilot Study done during Week 8 and 9. Additionally, a research paper was written to show the res ult of the Pilot Study.
+          <br/>
+        <b><u>Take Back From RadGrad Internship</u></b><br/>
+        This internship gave me a preview on working as a Software Engineer.<br/>
+        I think this gave me the opportunity to see what my current JavaScript and TypeScript skills. Furthermore, this internship was more
+        freestyle than anything. We were given a list of task to select from to work on. By having the free choice, I can see what I am capable of and not.
+        Thus, giving me an area to see where I need to improve on. 
+
+
 </div>
 
 
