--- a/internaloha.html
+++ b/internaloha.html
@@ -31,15 +31,45 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   <li>Group Organization: <a href = "https://internaloha.github.io/documentation/">LINK</a></li>
   <li>GitHub Repository: <a href ="https://github.com/internaloha/scrapers">LINK</a></li>
   </ul>
+  <b><u>Overview of Internaloha</u></b><br/>
+  Initially, University of Hawaii Computer Science undergraduates were able to find internships through the previous version internship page of RadGrad. However, since this version needed each internship to be manually entered. In order to spread internship awareness efficiently, Internaloha was created.
+  Internaloha is an automated scraper system of collecting internships from a variety of job searching websites and having them displayed on the RadGrad internship explorer page. Version 1 uses Javascript and the tool Puppeteer. A node.js library which uses Chromium dev tool, Puppeteer runs headless on default. Each scraper goes to a page and then manually searches through the site for internships. Eventually data is stored inside a JSON file. Finally, the data on the JSON file is manually transferred to RadGrad’s internship explorer page.
+  <img class="ui centered big image" src="https://github.com/saitoshi/images/blob/main/internaloha/radgrad.png?raw=true">
+  <div class = "comment">
+    <br/>
+    The data transfered from Internaloha becomes available on RadGrad Internship explorer page.
+  </div>
+  <br/>
   <b><u>Purpose</u></b><br/>
   The main purpose of this project was to update the previous scrappers by using TypeScript and a common format. Previously, the scrappers were written by a different group of students where the basic format was not necessarily uniform.
   For the Fall 2021, our main goal was to update is using classes and making it more unified within the different scrappers. <br/>
   Using the <a href ="https://github.com/internaloha/scrapers/projects/1">Project Board</a> function from GitHub, each student worked on a certain issue regarding to the scrappers.
   <br/>
+  <b><u>Contribution to Internaloha Version 2</u></b>
+  <br/>
   Below are the different scrappers and a brief summary associated to it. <br/>
   <b><a href ="https://github.com/internaloha/scrapers/blob/main/scrapers/Scraper.ziprecruiter.ts">ZipRecruiter Scrapper</a></b><br/>
-  This was the first scrapper I have worked on with the new format. Initially, I based it off of the previous ZipRecruiter scrapper.
-  However, I noticed that there were issues with following it. Thus, decided to trust my own confidence and was able to create the ZipRecruiter scrapper.
+  ZipRecruiter, was the first scraper I wrote with the new format. Initially, my process was to translate the code written in version 1 of the same ZipRecruiter and then run it. However, after the first trial I noticed that that was not an option.
+  To begin with, the HTML code that was written in version 1 did not match the current ZipRecruiter set up. Furthermore, there was a for loop within the code that did not make any sense as iterated within the same item five times.
+
+  <br/>
+  Compared to the other scrapers, writing ZipRecruiter took a longer time to write. Furthermore, the difficulty here was having the scraper keep scrolling through the page until there are no available jobs. With the new format, ZipRecruiter was written using 48 lines of code where version 1 of the same website required 130 lines of code.
+  <br/>
+  Overall, working on ZipRecruiter scraper provided a basic understanding on creating scrapers on the new format.
+ <br/>
+  <b><a href = "#">Monster Scrapper</a></b><br/>
+  For the second scraper, I wrote a scraper for Monster. The challenging part of Monster was to have it iterate it through multiple pages through a tab. Monster was similar to ZipRecruiter where the as long as there are information, the page can keep scrolling down through the list of internships. Unlike ZipRecruiter or other job websites, there was no div section name to create a while loop for. However, when looking at the source code using Google Chrome, there existed a div button where it stored the next section of listings. Thus, the scraper will keep extracting URL as long as the button exists.
+  <br/>
+  <code>
+    <p>
+    //while next link exists<br/>
+    while (await super.selectorExists(nextLink)) {<br/>
+    await this.page.click(nextPage);<br/>
+    </p>
+  </code>
+
+  <br/>
+  Furthermore, the Monster page is set up where all of the necessary information is spread out. Thus, the scraper collects the URL, position title, and company name from the main page. Then, the scraper goes to the individual URL of that specific position title and extracts the description of the job and the job location. While the job location was written in the main page, it was simpler to extract it from the individual position page for an easier to readable code.
   <br/>
   <b><a href="">GlassDoor Scrapper</a></b><br/>
   This was the third scrapper I have worked on. <br/>
