--- a/radgrad.html
+++ b/radgrad.html
@@ -100,6 +100,7 @@ Additionally, for the first week issues, we were asked to write essays on the di
         This internship gave me a preview on working as a Software Engineer.<br/>
         I think this gave me the opportunity to see what my current JavaScript and TypeScript skills. Furthermore, this internship was more
         freestyle than anything. We were given a list of task to select from to work on. By having the free choice, I can see what I am capable of and not.
+        <b>Link to the pap</b>
         Thus, giving me an area to see where I need to improve on.
 
 
