--- a/essay.html
+++ b/essay.html
@@ -26,6 +26,20 @@
     <div class="ui centered card">
       <img class = "ui medium image" src = "images/RadGrad.png">
       <div class="content">
+        <div class="centered aligned header">Upgrade of Internaloha</div>
+        <div class="meta">12-10-21</div>
+        <div class = "description">
+        An essay centering around the research of upgrading Internaloha, a student implemented webscraper.
+        </div>
+        <div class = "extra content">
+        <a href="internaloha-essay.html" class="ui bottom attached button">
+          READ MORE</a>
+        </div>
+      </div>
+    </div>
+    <div class="ui centered card">
+      <img class = "ui medium image" src = "images/RadGrad.png">
+      <div class="content">
         <div class="centered aligned header">Rising With RadGrad</div>
         <div class="meta">07-30-21</div>
         <div class = "description">
