--- a/essay.html
+++ b/essay.html
@@ -24,7 +24,7 @@
   <p> Some blog like essay I wrote both for classes and some outside of classes. </p>
   <div class ="ui three cards">
     <div class="ui centered card">
-      <img class = "ui medium image" src = "images/RadGrad.png">
+      <img class = "ui medium image" src = "https://internaloha.github.io/documentation/img/internaloha-logo.png">
       <div class="content">
         <div class="centered aligned header">Upgrade of Internaloha</div>
         <div class="meta">12-10-21</div>
