--- a/internaloha.html
+++ b/internaloha.html
@@ -26,7 +26,7 @@
 </div>
 <div class = "ui text container">
 <hr>
-For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/courses/ics-496-capstone-project-3/">ICS 469</a>) I have teamed up with Professor Johnson with the development of Internaloha Scrappers.
+For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/courses/ics-496-capstone-project-3/">ICS 469</a>) I have teamed up with Professor Johnson with the revamping of Internaloha Scrappers.
 <ul>
   <li>Group Organization: <a href = "https://internaloha.github.io/documentation/">LINK</a></li>
   <li>GitHub Repository: <a href ="https://github.com/internaloha/scrapers">LINK</a></li>
@@ -55,8 +55,13 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   <br/>
   Compared to the other scrapers, writing ZipRecruiter took a longer time to write. Furthermore, the difficulty here was having the scraper keep scrolling through the page until there are no available jobs. With the new format, ZipRecruiter was written using 48 lines of code where version 1 of the same website required 130 lines of code.
   <br/>
+  <img class="ui centered big image" src="https://github.com/saitoshi/images/blob/main/internaloha/zipcomp.png?raw=true">
+  <div class = "comment">
+    A screenshot of the code of Version 1 (on left) and Version 2 (on right) of Zip Recruiter Scraper.
+  </div>
   Overall, working on ZipRecruiter scraper provided a basic understanding on creating scrapers on the new format.
  <br/>
+
   <b><a href = "#">Monster Scrapper</a></b><br/>
   For the second scraper, I wrote a scraper for Monster. The challenging part of Monster was to have it iterate it through multiple pages through a tab. Monster was similar to ZipRecruiter where the as long as there are information, the page can keep scrolling down through the list of internships. Unlike ZipRecruiter or other job websites, there was no div section name to create a while loop for. However, when looking at the source code using Google Chrome, there existed a div button where it stored the next section of listings. Thus, the scraper will keep extracting URL as long as the button exists.
   <br/>
@@ -113,7 +118,24 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
     <br/>
     The code written to extract the number of internships.
   </div>
+  <b><u>Essay and Video</b></u><br/>
+  As a requirement for ICS 496, the last week was spent on creating a poster, a report, and a video presentation of Internaloha. While the video and poster was created as a team, the paper itself was done individually.
+  The essay was written using LaTex and is uploaded <a href ="https://csdl.ics.hawaii.edu/techreports/2021/21-02/21-02.pdf">here</a>.
+<img class="ui centered big image" src="https://www.radgrad.org/img/fall-2021/internaloha-fall-2021.png">
+<br/>
+  <div class = "comment">
+    The presentation created describing the process of revamping Internaloha.
+    <iframe width="420" height="345" src="https://www.youtube.com/embed/U2Rmrr2908M"></iframe>
+    <br/>
+    The video describing what was done to revamp Internaloha.
+  </div>
 
+<b><u>Results from Participation</u></b><br/>
+Working on Internaloha gave me an eye opener to scrapers and the legal aspect of software engineering. However, I think the most important thing I gained from participating is how code should be written.
+One of the personal issues I had with version 1 is that majority of the scraper code were hard to comprehend and digest. While it is true that they still scraped the different websites, this might lead to an issue in the
+future when the website is updates or changes its format. This was the case for ZipRecruiter. Thus, it motivated for me to check the code twice for any improvements or add comments to any code that might look weird.<br/>
+Furthermore, while the online setting was not a challenge as this is my third semester doing a group project online, it did allow me to reflect on how to work more effectively.
+For example, since most of the discussions were held through Discord, I made it a habit to add an emoji reply on the message to notify that I have read the message. Overall, I think participating in this group allowed me to continue the skills I have gained from RadGrad2 but from a different angle.
 </div>
 </div>
   </body>
