--- a/internaloha.html
+++ b/internaloha.html
@@ -22,7 +22,7 @@
 <h2 class = "ui centered aligned header"> Interaloha</h2>
 <b> Software Engineering, Meteor, React </b>
 <br/>
-<span class ="bold-list"> ON-GOING</span>
+<span class ="bold-list"> 12-10-2021</span>
 </div>
 <div class = "ui text container">
 <hr>
@@ -62,7 +62,7 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   Overall, working on ZipRecruiter scraper provided a basic understanding on creating scrapers on the new format.
  <br/>
 
-  <b><a href = "#">Monster Scrapper</a></b><br/>
+  <b><a href = "https://github.com/internaloha/scrapers/blob/main/scrapers/Scraper.monster.ts">Monster Scrapper</a></b><br/>
   For the second scraper, I wrote a scraper for Monster. The challenging part of Monster was to have it iterate it through multiple pages through a tab. Monster was similar to ZipRecruiter where the as long as there are information, the page can keep scrolling down through the list of internships. Unlike ZipRecruiter or other job websites, there was no div section name to create a while loop for. However, when looking at the source code using Google Chrome, there existed a div button where it stored the next section of listings. Thus, the scraper will keep extracting URL as long as the button exists.
   <br/>
   <code>
@@ -76,7 +76,7 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   <br/>
   Furthermore, the Monster page is set up where all of the necessary information is spread out. Thus, the scraper collects the URL, position title, and company name from the main page. Then, the scraper goes to the individual URL of that specific position title and extracts the description of the job and the job location. While the job location was written in the main page, it was simpler to extract it from the individual position page for an easier to readable code.
   <br/>
-  <b><a href="">GlassDoor Scrapper</a></b><br/>
+  <b><a href="https://github.com/internaloha/scrapers/blob/main/scrapers/Scraper.glassdoor.ts">GlassDoor Scrapper</a></b><br/>
   This was the third scrapper I have worked on. <br/>
   In the original scrapper GlassDoor took one to two hours to scrape all the necessary information. After writing two scrappers writing the scrapers itself did not
   take a long time compared to the previous two. However, unlike the two scrapers, the scraper only took the url from the main page and rest of the necessary information (position title, company, description, etc.)
@@ -120,7 +120,7 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   </div>
   <b><u>Essay and Video</b></u><br/>
   As a requirement for ICS 496, the last week was spent on creating a poster, a report, and a video presentation of Internaloha. While the video and poster was created as a team, the paper itself was done individually.
-  The essay was written using LaTex and is uploaded <a href ="https://csdl.ics.hawaii.edu/techreports/2021/21-02/21-02.pdf">here</a>.
+  The essay was written using LaTex and is uploaded <a href ="https://csdl.ics.hawaii.edu/techreports/2021/21-02/21-02.pdf">here</a>.<br/>
 <img class="ui centered big image" src="https://www.radgrad.org/img/fall-2021/internaloha-fall-2021.png">
 <br/>
   <div class = "comment">
@@ -131,11 +131,9 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
   </div>
 
 <b><u>Results from Participation</u></b><br/>
-Working on Internaloha gave me an eye opener to scrapers and the legal aspect of software engineering. However, I think the most important thing I gained from participating is how code should be written.
-One of the personal issues I had with version 1 is that majority of the scraper code were hard to comprehend and digest. While it is true that they still scraped the different websites, this might lead to an issue in the
-future when the website is updates or changes its format. This was the case for ZipRecruiter. Thus, it motivated for me to check the code twice for any improvements or add comments to any code that might look weird.<br/>
+Working on Internaloha gave me an eye-opener to scrapers and the legal aspect of software engineering. However, I think the most important thing I gained from participating is how code should be written. One of the personal issues I had with version 1 is that majority of the scraper code was hard to comprehend and digest. While it is true that they still scraped the different websites, this might lead to an issue in the future when the website is updated or changes its format. This was the case for ZipRecruiter. Thus, it motivated me to check the code twice for any improvements or add comments to any code that might look weird.<br/>
 Furthermore, while the online setting was not a challenge as this is my third semester doing a group project online, it did allow me to reflect on how to work more effectively.
-For example, since most of the discussions were held through Discord, I made it a habit to add an emoji reply on the message to notify that I have read the message. Overall, I think participating in this group allowed me to continue the skills I have gained from RadGrad2 but from a different angle.
+For example, since most of the discussions were held through Discord, I made it a habit to add an emoji reply on the message to notify that I have read the message. Overall, I think participating in this group allowed me to continue the skills I have gained from RadGrad2 but a different angle.
 </div>
 </div>
   </body>
