--- a/internaloha.html
+++ b/internaloha.html
@@ -95,6 +95,10 @@ For my Capstone Project course (<a href ="https://manoa.hawaii.edu/catalog/cours
       for (let j = 2; j < numberOfPages+1; j++) {
     </p>
   </code>
+  <div class = "comment">
+    <br/>
+    The code written to extract the number of pages available to loop through.
+  </div>
   <br/>
   <b><a href ="https://github.com/internaloha/scrapers/blob/403de67709b04523503e6cb516c8555ef3dbdb73/scrapers/Scraper.stackoverflow.ts">StackOverFlow Scrapper</a></b><br/>
   This was the fourth scrapper I have worked on. <br/>
